# spilldem

./: .gitignore  CMakeLists.txt  README.md
src/: SpillDEMConfig.h.in  main.cpp
